# M2ENGINE

./: .gitignore  .gitmodules  CMakeLists.txt  Core.h  README.md  main.cpp
Engine/: App.cpp  App.h  Core.h  CoreInc.h  Data.cpp  Data.h  ETime.h  EntryPoint.h  Implicit.cpp  Implicit.h  Input.cpp  Input.h  Log.h  Mesh.cpp  Mesh.h  Physic.cpp  Physic.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Time.cpp  Time.h  World.h  utils.cpp  utils.h
Engine/Components/: CCamera.cpp  CCamera.h  CDirectionalLight.cpp  CDirectionalLight.h  CDummy.cpp  CDummy.h  CLandscape.cpp  CLandscape.h  CMeshRenderer.cpp  CMeshRenderer.h  CParticleContainer.cpp  CParticleContainer.h  CRigidBody.cpp  CRigidBody.h  CTransform.cpp  CTransform.h  Component.cpp  Component.h
Engine/Core/: App.cpp  App.h  Bezier.cpp  Bezier.h  Box.cpp  Box.h  Data.cpp  Data.h  GenericHandle.cpp  GenericHandle.h  Grid.cpp  Grid.h  HeightField.cpp  HeightField.h  Image.cpp  Image.h  Input.cpp  Input.h  KDTree.h  Log.cpp  Log.h  Ray.cpp  Ray.h  ScalarField.cpp  ScalarField.h  Scene.cpp  Scene.h  Serialize.cpp  Serialize.h  World.cpp  utils.cpp  utils.h
Engine/Implicits/: BoxExact.cpp  BoxExact.h  BoxFrame.cpp  BoxFrame.h  CappedConeExact.cpp  CappedConeExact.h  Implicit.cpp  Implicit.h  ImplicitAll.h  ImplicitTriangulate.cpp  ImplicitTriangulate.h  Plane.cpp  Plane.h  Rombus.cpp  Rombus.h  Sphere.cpp  Sphere.h
Engine/Implicits/Operators/: Difference.cpp  Difference.h  DifferenceSmooth.cpp  DifferenceSmooth.h  ImplicitNode.cpp  ImplicitNode.h  Intersection.cpp  Intersection.h  IntersectionSmooth.cpp  IntersectionSmooth.h  Operators.h  Union.cpp  Union.h  UnionSmooth.cpp  UnionSmooth.h
Engine/Objects/: OCamera.cpp  OCamera.h  Object.cpp  Object.h
Engine/Physic/: PBDContainer.cpp  PBDContainer.h  ParticleData.cpp  ParticleData.h  Physic.cpp  Physic.h
Engine/Rendering/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Engine/UI/: EditorUIDraw.h  UIDetailsWindow.cpp  UIDetailsWindow.h  UIHierarchyWindow.cpp  UIHierarchyWindow.h  UIWindow.cpp  UIWindow.h  imgui_stdlib.cpp  imgui_stdlib.h
libraries/: CMakeLists.txt
libraries/glad/include/glad/: gl.h  glad.h
libraries/glad/src/: glad.c
shaders/: cs_copy_z.compute  cs_culling.compute  cs_downscale_z.compute  cs_indirect.compute  cs_indirect_count.compute  cs_occluding.compute  f_particle.frag  f_shadowmap.frag  f_simple.frag  f_textured.frag  fs_sms_mesh.frag  fs_sms_shadow.sh  v_particle.vert  v_shadowmap.vert  v_shadowmap_inst.vert  v_simple.vert  v_simple_inst.vert  v_textured.vert  v_textured_inst.vert  varying.def.sc  vs_sms_mesh.vert
src/: App.cpp  Data.h  Input.cpp  Input.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  Singleton.h  Time.cpp
src/Components/: CMeshRenderer.cpp  CTransform.cpp  CTransform.h  Component.cpp  Component.h
src/Objects/: OCamera.cpp  Object.h
